2007-12-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Makefile.am: Add Banshee.AudioProfiles.Gui
	to build.

2007-12-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Localization.cs:
	* src/Core/Banshee.Core/Banshee.Base/Localization.cs:
	* src/Core/Banshee.Core/Makefile.am: Move file/add to build.

	* src/Core/Banshee.Services/Makefile.am: Add Banshee.AudioProfile to build.

2007-12-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/*:
	* src/Core/Banshee.ThickClient/Banshee.AudioProfiles.Gui/*: Move files.

2007-12-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Banshee.AudioProfiles/*:
	* src/Core/Banshee.Services/Banahsee.AudioProfiles/*: Move files.

	* src/Core/Banshee.Services/Banshee.Playlists.Formats/*Format.cs: Take
	ITrackModelSource instead of Source.

2007-12-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Remove Self
	property.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs: Do
	not use Self property, just use null for the property name.  Uncomment all
	the columns.

	* src/Core/Banshee.Services/Banshee.Collection.Database/BansheeCacheableModelAdapter.cs:
	Comment out FetchSet logging.

2007-12-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView.cs: Clean up some code, move
	Rectangle allocation and setting of common parts to outside of loops.

2007-12-13  Gabriel Burt  <gabriel.burt@gmail.com>

	This patch changes the way objects are bound to the ListViews, removing
	the FieldIndex attributes, instead passing a property name (or null to
	return the object itself) instead.  SelectAll/None actions are added.
	Commented out code for the rest of the TrackInfo columns also added.

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs:
	Load PlayCount, SkipCount, LastPlayed, and DateAdded when loading the